[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.29.1"
tiny_http = "0.12.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
url = "2.5.4"

context = { path = "../context" } 
indexer = { path = "../indexer" } 